--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <link
       rel="icon"
       type="image/jpeg"
-      href="/newway-mission/logo/newwaychurch-logo.jpg"
+      href="/prayers/logo/newwaychurch-logo.jpg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- PWA 설정 -->
-    <link rel="manifest" href="/newway-mission/manifest.json" />
+    <link rel="manifest" href="/prayers/manifest.json" />
     <meta name="theme-color" content="#262728" />
 
     <!-- iOS/iPadOS 설정 -->
@@ -23,7 +23,7 @@
     <meta name="apple-mobile-web-app-title" content="NW기도" />
     <link
       rel="apple-touch-icon"
-      href="/newway-mission/logo/newwaychurch-logo.jpg"
+      href="/prayers/logo/newwaychurch-logo.jpg"
     />
 
     <!-- 기본 메타 정보 -->
@@ -37,14 +37,14 @@
     <meta property="og:title" content="뉴웨이교회 기도" />
     <!-- <meta
       property="og:image"
-      content="https://yjineey.github.io/newway-mission/logo/newway-logo.png"
+      content="https://yjineey.github.io/prayers/logo/newway-logo.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" /> -->
     <meta
       property="og:url"
-      content="https://yjineey.github.io/newway-mission/"
+      content="https://yjineey.github.io/prayers/"
     />
 
     <!-- Pretendard 폰트 -->
