--- a/public/404.html
+++ b/public/404.html
@@ -15,14 +15,14 @@
     <meta property="og:title" content="보혈선포문" />
     <meta
       property="og:url"
-      content="https://yjineey.github.io/newway-mission/"
+      content="https://yjineey.github.io/prayers/"
     />
 
     <script>
       // GitHub Pages SPA 리다이렉트
       sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='/newway-mission/'" />
+    <meta http-equiv="refresh" content="0;URL='/prayers/'" />
   </head>
   <body></body>
 </html>
