Rename app title from NW Prayers to 보혈선포문

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
     <!-- 기본 메타 정보 -->
     <meta name="author" content="뉴웨이교회" />
-    <title>뉴웨이교회 기도</title>
+    <title>보혈선포문</title>
 
     <!-- Open Graph (카카오톡 공유) -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:site_name" content="뉴웨이교회 기도" />
-    <meta property="og:title" content="뉴웨이교회 기도" />
+    <meta property="og:site_name" content="보혈선포문" />
+    <meta property="og:title" content="보혈선포문" />
     <!-- <meta
       property="og:image"
       content="https://yjineey.github.io/prayers/logo/newway-logo.png"
