Update title and metadata

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
     />
 
     <!-- 기본 메타 정보 -->
-    <title>보혈선포문</title>
+    <title>뉴웨이교회</title>
 
     <!-- Open Graph (카카오톡 공유) -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:site_name" content="보혈선포문" />
-    <meta property="og:title" content="보혈선포문" />
+    <meta property="og:title" content="NW 보혈선포문 · 기도문" />
+    <meta property="og:description" content="보혈선포문 · 기도문" />
+
     <!-- <meta
       property="og:image"
       content="https://yjineey.github.io/prayers/logo/newway-logo.png"
