--- a/public/404.html
+++ b/public/404.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- 기본 메타 정보 -->
-    <title>보혈선포문</title>
 
     <!-- Open Graph (카카오톡 공유) -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:site_name" content="보혈선포문" />
-    <meta property="og:title" content="보혈선포문" />
+    <meta property="og:title" content="NW 보혈선포문 · 기도문" />
+    <meta property="og:description" content="보혈선포문 · 기도문" />
     <meta
       property="og:url"
       content="https://yjineey.github.io/prayers/"
     />
+
 
     <script>
       // GitHub Pages SPA 리다이렉트
