--- a/public/404.html
+++ b/public/404.html
@@ -8,6 +8,7 @@
     <!-- Open Graph (카카오톡 공유) -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
+    <meta property="og:site_name" content="뉴웨이교회" />
     <meta property="og:title" content="NW 보혈선포문 · 기도문" />
     <meta property="og:description" content="보혈선포문 · 기도문" />
     <meta
