Update HTML and manifest files

--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
       name="apple-mobile-web-app-status-bar-style"
       content="black-translucent"
     />
-    <meta name="apple-mobile-web-app-title" content="NW기도" />
+    <meta name="apple-mobile-web-app-title" content="뉴웨이교회" />
     <link
       rel="apple-touch-icon"
       href="/prayers/logo/newwaychurch-logo.jpg"
     />
 
     <!-- 기본 메타 정보 -->
+    <meta name="description" content="보혈선포문 · 기도문" />
+    <meta name="keywords" content="뉴웨이교회, 보혈선포문, 기도문" />
+    <meta name="author" content="뉴웨이교회" />
     <title>뉴웨이교회</title>
 
     <!-- Open Graph (카카오톡 공유) -->
