--- a/public/404.html
+++ b/public/404.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- 기본 메타 정보 -->
+    <meta name="description" content="보혈선포문 · 기도문" />
+    <meta name="keywords" content="뉴웨이교회, 보혈선포문, 기도문" />
+    <meta name="author" content="뉴웨이교회" />
+    <title>뉴웨이교회</title>
 
     <!-- Open Graph (카카오톡 공유) -->
     <meta property="og:type" content="website" />
