Clean up unused files and update meta tags

--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
     <!-- Open Graph (카카오톡 공유) -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="ko_KR" />
-    <meta property="og:site_name" content="뉴웨이교회" />
-    <meta property="og:title" content="NW 보혈선포문 · 기도문" />
-    <meta property="og:description" content="보혈선포문 · 기도문" />
+    <meta property="og:title" content="뉴웨이교회" />
+    <meta property="og:description" content="보혈선포문과 기도문을 확인하세요" />
 
     <!-- <meta
       property="og:image"
